--- a/public/subject-tutoring-dash.html
+++ b/public/subject-tutoring-dash.html
@@ -29,11 +29,11 @@
     <textarea id="student-expectation" class="expectation-input" disabled></textarea>
 </div>
 
-  <div id="student-general-notes-div">
-    <h2 class="student-notes-label background-black">Notes</h2>
-    <div id="student-general-notes" class="student-notes">
+  <div id="generalStudentMessageDiv">
+    <h2 class="studentMessageLabel background-black">Notes</h2>
+    <div id="generalStudentMessages" class="studentMessages">
     </div>
-    <textarea id="student-general-notes-input" class="student-notes-input" placeholder="Any notes?"></textarea>
+    <textarea id="generalStudentMessageInput" class="studentMessageInput" placeholder="Any notes?"></textarea>
   </div>
 
 
