--- a/public/Dashboard/Dev.html
+++ b/public/Dashboard/Dev.html
@@ -32,6 +32,7 @@
 
     <div class="flex-row justify-space-between" style="margin: 20px;">
       <button class="button" onclick="window.location.href='Admin.html'">Go to Admin</button>
+      <button class="button" onclick="window.location.href='../calendar.html'">Calendar Testing</button>
       <!-- <button class="button" onclick="window.location.href='Secretary.html'">Go to Secretary</button>
       <button class="button" onclick="window.location.href='Tutor.html'">Go to Tutor</button> -->
       <button class="button" onclick="signOut()">Sign Out</button>
