need to merge with Duncan's chat changes

--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -82,7 +82,7 @@
                         <h2>What If...?</h2>
                     </div>
                     <div class='item itemB2 cursor'>
-                        <h2>Submit</h2>
+                        <h2 onclick = "submitSession()">Submit</h2>
                     </div>
                 </div>
             </div>
@@ -320,7 +320,6 @@
     </section>
 
 
-
     <section id='englishSection' class='mainBody hidden'>
     
         <div class='genearlInfo input-row-center'>
@@ -396,7 +395,6 @@
         </div>
     
     </section>
-
 
 
     <section id = 'mathSection' class = 'mainBody hidden'>
@@ -476,7 +474,6 @@
     </section>
 
 
-
     <section id = 'readingSection' class = 'mainBody hidden'>
 
         <div class='genearlInfo input-row-center'>
@@ -552,7 +549,6 @@
         </div>
 
     </section>
-
 
 
     <section id = 'scienceSection' class = 'mainBody hidden'>
