--- a/public/calendar.html
+++ b/public/calendar.html
@@ -9,6 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/fullcalendar@5.7.2/main.min.css" rel="stylesheet">
   <link href='https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.css' rel='stylesheet' />
   <link href='https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.13.1/css/all.css' rel='stylesheet'>
+  <link href="calendar.css" rel="stylesheet">
 
   <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.7.2/main.min.js"></script>
   
@@ -24,7 +25,7 @@
 </head>
 
 <style>
-  
+
 </style>
 
 <body>
