--- a/public/calendar.html
+++ b/public/calendar.html
@@ -6,10 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TESTING</title>
   <link href="Site Templates/site-wide.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/fullcalendar@5.7.2/main.min.css" rel="stylesheet">
-  <link href='https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.css' rel='stylesheet' />
-  <link href='https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.13.1/css/all.css' rel='stylesheet'>
+  <link href="https://cdn.jsdelivr.net/npm/fullcalendar@5.8.0/main.min.css" rel="stylesheet">
+  <!-- <link href='https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.css' rel='stylesheet' />
+  <link href='https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.13.1/css/all.css' rel='stylesheet'> -->
   <link href="calendar.css" rel="stylesheet">
+
+  <!-- jQuery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+  <!-- semantic UI -->
+  <link async rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.0.3/dist/semantic.min.css"/>
+  <script async src="//cdn.jsdelivr.net/npm/semantic-ui@2.0.3/dist/semantic.min.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.7.2/main.min.js"></script>
   
@@ -24,10 +31,69 @@
   <script src="calendar.js" defer></script>
 </head>
 
-<style>
+<body onload="initialSetup()">
+  <div class="calendarNav">
+    <div class="dropdown">
+      <button class="dropbtn">add event</button>
+      <div class="dropdown-content">
+        <div>ACT</div>
+        <div>Subject Tutoring</div>
+        <div>Math Program</div>
+        <div>Phonics Program</div>
+        <div>Practice Test</div>
+        <div>Review</div>
+        <div>Conference</div>
+        <div onclick="setupInputTeacherMeeting()">Teacher Meeting</div>
+        <div>General Info</div>
+        <div>Custom</div>
+      </div>
+    </div>
+  </div>
 
-</style>
+  <div id="mainCalendarContent">
+    <div id='calendar'></div>
+    <div id="sidebar" class="displayNone">
+      <!-- add teacher meeting -->
+      <div id="addTeacherMeetingWrapper" class="displayNone">
+        <!-- start and stop -->
+        <div class="inputRow">
+          <div class="more-info " data-more-info="Click and drag over the time you want to have the teacher meeting.">?</div>
+          <p>Start:</p>
+          <p id="addTeacherMeetingStart"></p>
+        </div>
+        <div class="inputRow">
+          <div class="more-info visibilityHidden" data-more-info="">?</div>
+          <p>End:</p>
+          <p id="addTeacherMeetingEnd"></p>
+        </div>
+        <br>
 
-<body>
-  <div id='calendar'></div>
+        <!-- centers invited-->
+        <div class="inputRow">
+          <div class="more-info " data-more-info="Select the centers that are invited to this teacher meeting (all staff will be included).">?</div>
+          <label for="addTeacherMeetingCenters" class="label">Which centers?</label>
+        </div>
+        <select id="addTeacherMeetingCenters" name="addTeacherMeetingCenters" class="ui dropdown" multiple></select>
+        <br>
+
+        <!-- where is it being held -->
+        <div class="inputRow">
+          <div class="more-info " data-more-info="Select the centers that the meeting will be held at.">?</div>
+          <label for="addTeacherMeetingLocation" class="label">Where?</label>
+        </div>
+        <select id="addTeacherMeetingLocation" name="addTeacherMeetingLocation" class="select">
+        </select>
+
+        <!-- buttons -->
+        <div class="bottom">
+          <button onclick="cancelAddTeacherMeeting()" class="button">cancel</button>
+          <button onclick="submitAddTeacherMeeting()" class="button">submit</button>
+        </div>
+      </div>
+
+
+
+    </div>
+  </div>
+
 </body>
