Cram Sessions and Phonics Printouts

--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -288,6 +288,15 @@
                 </div>
                 </div>
             </div>
+            <div class = 'input-block-center'>
+                <div>Cram Sessions</div>
+                <div class = 'input-row-center'>
+                    <button class = 'tinyButton' onclick = "openCramSession('1')">1</button>
+                    <button class = 'tinyButton' onclick = "openCramSession('2')">2</button>
+                    <button class = 'tinyButton' onclick = "openCramSession('3')">3</button>
+                    <button class = 'tinyButton' onclick = "openCramSession('4')">4</button>
+                </div>
+            </div>
         </div>
 
         <!------------------->
