everything should be good

--- a/public/Dashboard/Admin.html
+++ b/public/Dashboard/Admin.html
@@ -276,8 +276,8 @@
           <thead>
             <tr>
               <th>Student</th>
+              <th>Type(s)</th>
               <th>Location</th>
-              <th>Status</th>
               <th>Parent</th>
             </tr>
           </thead>
