--- a/public/Dashboard/Secretary.html
+++ b/public/Dashboard/Secretary.html
@@ -47,6 +47,7 @@
           <thead>
             <tr>
               <th>Student</th>
+              <th>Type(s)</th>
               <th>Location</th>
               <th>Parent</th>
             </tr>
