--- a/public/Dashboard/Tutor.html
+++ b/public/Dashboard/Tutor.html
@@ -63,6 +63,7 @@
           <thead>
             <tr>
               <th>Student</th>
+              <th>Type(s)</th>
               <th>Location</th>
             </tr>
           </thead>
