cancel made general

--- a/public/calendar.html
+++ b/public/calendar.html
@@ -77,13 +77,13 @@
 
         <!-- where is it being held -->
         <div class="inputRow">
-          <label for="addTeacherMeetingLocation" class="label">Where?</label>
+          <label for="addTeacherMeetingLocation" class="label">Where will this meeting be held?</label>
         </div>
         <input id="addTeacherMeetingLocation" name="addTeacherMeetingLocation" class="input">
 
         <!-- buttons -->
         <div class="bottom">
-          <button onclick="cancelAddTeacherMeeting()" class="button">cancel</button>
+          <button onclick="cancelSidebarCallback()" class="button">cancel</button>
           <button onclick="submitAddTeacherMeeting()" class="button">submit</button>
         </div>
       </div>
@@ -111,7 +111,7 @@
 
         <!-- buttons -->
         <div class="bottom">
-          <button onclick="cancelEditTeacherMeeting()" class="button">cancel</button>
+          <button onclick="cancelSidebarCallback()" class="button">cancel</button>
           <button onclick="updateEditTeacherMeeting()" class="button">update</button>
           <button onclick="deleteEventCallback()" class="button danger">delete</button>
         </div>
@@ -135,7 +135,7 @@
 
         <!-- buttons -->
         <div class="bottom">
-          <button onclick="cancelAddGeneralInfo()" class="button">cancel</button>
+          <button onclick="cancelSidebarCallback()" class="button">cancel</button>
           <button onclick="submitAddGeneralInfo()" class="button">submit</button>
         </div>
       </div>
@@ -158,7 +158,7 @@
 
         <!-- buttons -->
         <div class="bottom">
-          <button onclick="cancelEditGeneralInfo()" class="button">cancel</button>
+          <button onclick="cancelSidebarCallback()" class="button">cancel</button>
           <button onclick="updateEditGeneralInfo()" class="button">update</button>
           <button onclick="deleteEventCallback()" class="button danger">delete</button>
         </div>
@@ -182,7 +182,7 @@
 
         <!-- buttons -->
         <div class="bottom">
-          <button onclick="cancelAddPracticeTest()" class="button">cancel</button>
+          <button onclick="cancelSidebarCallback()" class="button">cancel</button>
           <button onclick="submitAddPracticeTest()" class="button">submit</button>
         </div>
       </div>
@@ -205,7 +205,7 @@
 
         <!-- buttons -->
         <div class="bottom">
-          <button onclick="cancelEditPracticeTest()" class="button">cancel</button>
+          <button onclick="cancelSidebarCallback()" class="button">cancel</button>
           <button onclick="updateEditPracticeTest()" class="button">update</button>
           <button onclick="deleteEventCallback()" class="button danger">delete</button>
         </div>
@@ -229,7 +229,7 @@
 
         <!-- buttons -->
         <div class="bottom">
-          <button onclick="cancelAddConference()" class="button">cancel</button>
+          <button onclick="cancelSidebarCallback()" class="button">cancel</button>
           <button onclick="submitAddConference()" class="button">submit</button>
         </div>
       </div>
@@ -252,7 +252,7 @@
 
         <!-- buttons -->
         <div class="bottom">
-          <button onclick="cancelEditConference()" class="button">cancel</button>
+          <button onclick="cancelSidebarCallback()" class="button">cancel</button>
           <button onclick="updateEditConference()" class="button">update</button>
           <button onclick="deleteEventCallback()" class="button danger">delete</button>
         </div>
