--- a/public/calendar.html
+++ b/public/calendar.html
@@ -55,11 +55,11 @@
         <div>Subject Tutoring</div>
         <div>Math Program</div>
         <div>Phonics Program</div>
-        <div onclick="setupInputPracticeTest()">Practice Test</div>
+        <div onclick="setupAddPracticeTest()">Practice Test</div>
         <div>Test Review</div>
-        <div onclick="setupInputConference()">Conference</div>
-        <div onclick="setupInputTeacherMeeting()">Teacher Meeting</div>
-        <div onclick="setupInputGeneralInfo()">General Info</div>
+        <div onclick="setupAddConference()">Conference</div>
+        <div onclick="setupAddTeacherMeeting()">Teacher Meeting</div>
+        <div onclick="setupAddGeneralInfo()">General Info</div>
       </div>
     </div>
   </div>
@@ -106,12 +106,11 @@
         <div class="inputRow">
           <label for="editTeacherMeetingStaff" class="label">Staff</label>
         </div>
-        <div id="editTeacherMeetingStaff" class="sidebarList">
-        </div>
+        <div id="editTeacherMeetingStaff" class="sidebarList"></div>
 
         <!-- buttons -->
         <div class="bottom">
-          <button onclick="cancelSidebarCallback()" class="button">cancel</button>
+          <button onclick="cancelEditCallback()" class="button">cancel</button>
           <button onclick="updateEditTeacherMeeting()" class="button">update</button>
           <button onclick="deleteEventCallback()" class="button danger">delete</button>
         </div>
@@ -158,7 +157,7 @@
 
         <!-- buttons -->
         <div class="bottom">
-          <button onclick="cancelSidebarCallback()" class="button">cancel</button>
+          <button onclick="cancelEditCallback()" class="button">cancel</button>
           <button onclick="updateEditGeneralInfo()" class="button">update</button>
           <button onclick="deleteEventCallback()" class="button danger">delete</button>
         </div>
@@ -205,7 +204,7 @@
 
         <!-- buttons -->
         <div class="bottom">
-          <button onclick="cancelSidebarCallback()" class="button">cancel</button>
+          <button onclick="cancelEditCallback()" class="button">cancel</button>
           <button onclick="updateEditPracticeTest()" class="button">update</button>
           <button onclick="deleteEventCallback()" class="button danger">delete</button>
         </div>
@@ -252,7 +251,7 @@
 
         <!-- buttons -->
         <div class="bottom">
-          <button onclick="cancelSidebarCallback()" class="button">cancel</button>
+          <button onclick="cancelEditCallback()" class="button">cancel</button>
           <button onclick="updateEditConference()" class="button">update</button>
           <button onclick="deleteEventCallback()" class="button danger">delete</button>
         </div>
