beginnings of availability

--- a/public/calendar.html
+++ b/public/calendar.html
@@ -55,11 +55,11 @@
         <div>Subject Tutoring</div>
         <div>Math Program</div>
         <div>Phonics Program</div>
-        <div onclick="setupAddPracticeTest()">Practice Test</div>
+        <div onclick="setupAddSidebar('practiceTest')">Practice Test</div>
         <div>Test Review</div>
-        <div onclick="setupAddConference()">Conference</div>
-        <div onclick="setupAddTeacherMeeting()">Teacher Meeting</div>
-        <div onclick="setupAddGeneralInfo()">General Info</div>
+        <div onclick="setupAddSidebar('conference')">Conference</div>
+        <div onclick="setupAddSidebar('teacherMeeting')">Teacher Meeting</div>
+        <div onclick="setupAddSidebar('generalInfo')">General Info</div>
       </div>
     </div>
   </div>
