last session printout

--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -297,6 +297,12 @@
                     <button class = 'tinyButton' onclick = "openCramSession('4')">4</button>
                 </div>
             </div>
+            <div class = 'input-block-center'>
+                <div>Last Session</div>
+                <div class = 'input-row-center'>
+                    <button class = 'tinyButton' onclick = "openLastSession()">Last</button>
+                </div>
+            </div>
         </div>
 
         <!------------------->
